src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --font-xl: 42px;
  --font-lg: 24px;
  --font-md: 20px;
  --font-sm: 18px;
  --font-xs: 16px;
  --font-xxs: 14px;
}

@media (max-width: 768px) {
  :root {
    --font-xl: 18px;
    --font-lg: 16px;
    --font-md: 14px;
    --font-sm: 12px;
    --font-xs: 12px;
    --font-xxs: 12px;
  }
}

@layer base {
  body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    color: #222;
    background-color: #fff;
    line-height: 1.4;
    font-size: var(--font-md);
  }

  a {
    color: #65638f;
    text-decoration: none;
  }

  a:hover {
    color: #5a51fe;
  }

  h1,
  h2 {
    font-family: "Heebo", sans-serif;
  }
}

.bg-shape {
  fill: #f6f8fa;
}

.tobi-zoom__icon {
  display: none;
}

@media (prefers-color-scheme: dark) {
  @layer base {
    body {
      color: #f3f4f6;
      background-color: #0f172a;
    }

    a {
      color: #a5b4fc;
    }

    a:hover {
      color: #c7d2fe;
    }
  }

  .bg-shape {
    fill: #1e293b;
  }
}

